--- a/index.html
+++ b/index.html
@@ -33,74 +33,31 @@
 		<p> You can preorder my service. For now it's not expensive. And you should. Oh yes you should!</p>
 
 		<br>
-		<hr>
-		<h3>More about me:</h3>
-		<p>So you're interessed ? Wow. Look at such amazing information about me behind :</p>
-		<!-- Github widget -->
-		<a href="https://github.com/doliG" target="_blank">
-			<div class="social" id="github">
-				<i class="fa fa-github-square fa-3x"></i>
-				<span class="social-content">
-					Github as doliG
-				</span>
-			</div>
-		</a>
-		<!-- end widget -->
-		<!-- Twitter widget  -->
-		<a href="https://twitter.com/GuiguiLeBigorno" target="_blank">
-			<div class="social" id="twitter">
-				<i class="fa fa-twitter-square fa-3x"></i>
-				<span class="social-content">
-					Twitter as LeBigorno
-				</span>
-			</div>
-		</a>
-		<!-- end widget -->
-		<!-- Linkedin widget  -->
-		<a href="https://fr.linkedin.com/in/guillaume-lodi-324569133" target="_blank">
-			<div class="social" id="linkedin">
-				<i class="fa fa-linkedin-square fa-3x"></i>
-				<span class="social-content">
-					Linkedin as Guillaume Lodi
-				</span>
-			</div>
-		</a>
-		<!-- end widget -->
 
-		<br>
-		<hr>
-		<h3>Contact me directly</h3>
-		<p>Wow baby, maybe it's too early...</p>
-
-		<!-- Whatsapp widget -->
-		<div class="social" id="skype">
-			<i class="fa fa-skype fa-3x"></i>
-			<span class="social-content">
-				guigui96999
-			</span>
+		<div class="socials-icons">
+			<div class="icon">
+				<a href="">
+					<i class="fa fa-github-square fa-3x" id="github"></i>
+				</a>
+			</div>
+			<div class="icon">
+				<a href="#">
+					<i class="fa fa-linkedin-square fa-3x" id="linkedin"></i>
+				</a>
+			</div>
+			<div class="icon">
+				<a href="">
+					<i class="fa fa-twitter-square fa-3x" id="twitter"></i>
+				</a>
+			</div>
+			<div class="icon">
+				<a href="">
+					<i class="fa fa-envelope fa-3x" id="gmail"></i>
+				</a>
+			</div>
 		</div>
-		<!-- end widget -->
-		<!-- Messenger widget -->
-		<a href="http://m.me/guillaume.lodi">
-			<div class="social" id="messenger">
-				<i class="fa fa-commenting-o fa-3x"></i>
-				<span class="social-content">
-				Messenger
-				</span>
-			</div>
-		</a>
-		<!-- end widget -->
-		<!-- Mail widget  -->
-		<a href="mailto:guillaume.lodi@gmail.com">
-			<div class="social" id="gmail">
-				<i class="fa fa-envelope fa-3x"></i>
-				<span class="social-content">
-					guillaume.lodi@gmail.com
-				</span>
-			</div>
-		</a>
-		<!-- end widget -->
 	</div>
+
 
 	<footer>
 		<p id="my-footer">Ima footer, lmao - ©2017</p>
