Page d'acceuil statique finie

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>doliG - official</title>
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Source+Sans+Pro" rel="stylesheet">
 	<script src="https://use.fontawesome.com/13a64c4418.js"></script>
@@ -12,7 +14,7 @@
 
 <body>
 
-	<header>
+	<header class="animated fadeInDown">
 		<div class="flip-container">
 			<div class="flipper">
 				<div class="front">
@@ -26,7 +28,7 @@
 		<h1>doliG</h1>
 	</header>
 
-	<div class="container">
+	<section class="container animated fadeIn">
 		<h1>Hey you! Welcome here.</h1>
 		<h3>I'm doliG. Just call me dol.</h3><br>
 		<p> I'll be soon a web-developper. I do not even know if I will be full stack, front or back-end, but be sure I'll be polyvalent.</p>
@@ -34,32 +36,37 @@
 
 		<br>
 
-		<div class="socials-icons">
+		<div class="socials-icons animated zoomIn">
 			<div class="icon">
-				<a href="">
-					<i class="fa fa-github-square fa-3x" id="github"></i>
+				<a href="https://m.me/guillaume.lodi">
+					<img src="images/facebook-messenger.svg" alt="messenger" id="messenger" height="37px">
 				</a>
 			</div>
 			<div class="icon">
-				<a href="#">
-					<i class="fa fa-linkedin-square fa-3x" id="linkedin"></i>
+				<a href="https://github.com/dolig">
+					<i class="fa fa-github fa-3x" id="github"></i>
 				</a>
 			</div>
 			<div class="icon">
-				<a href="">
-					<i class="fa fa-twitter-square fa-3x" id="twitter"></i>
+				<a href="https://www.linkedin.com/in/guillaume-lodi-324569133">
+					<i class="fa fa-linkedin fa-3x" id="linkedin"></i>
 				</a>
 			</div>
 			<div class="icon">
-				<a href="">
-					<i class="fa fa-envelope fa-3x" id="gmail"></i>
+				<a href="https://twitter.com/GuiguiLeBigorno">
+					<i class="fa fa-twitter fa-3x" id="twitter"></i>
+				</a>
+			</div>
+			<div class="icon" id="icon-right">
+				<a href="mailto:guillaume.lodi@gmail.com">
+					<i class="fa fa-at fa-3x" id="gmail"></i>
 				</a>
 			</div>
 		</div>
-	</div>
+	</section>
 
 
-	<footer>
+	<footer class="animated fadeIn">
 		<p id="my-footer">Ima footer, lmao - ©2017</p>
 	</footer>
 
