--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/terminal.css">
+	<link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Source+Sans+Pro" rel="stylesheet">
 	<script src="https://use.fontawesome.com/13a64c4418.js"></script>
 
@@ -14,7 +16,7 @@
 
 <body>
 
-	<header class="animated fadeInDown">
+	<header class="animated fadeInDown hidden">
 		<div class="flip-container">
 			<div class="flipper">
 				<div class="front">
@@ -28,7 +30,7 @@
 		<h1>doliG</h1>
 	</header>
 
-	<section class="container animated fadeIn">
+	<section class="container animated fadeIn hidden">
 		<h1>Hey you! Welcome here.</h1>
 		<h3>I'm doliG. Just call me dol.</h3><br>
 		<p> I'll be soon a web-developper. I do not even know if I will be full stack, front or back-end, but be sure I'll be polyvalent.</p>
@@ -62,6 +64,19 @@
 					<i class="fa fa-at fa-3x" id="gmail"></i>
 				</a>
 			</div>
+		</div>
+	</section>
+
+	<section class="terminal">
+		<div class="terminal-top-bar">
+			<div id="close-button"></div>
+			<div id="minimize-button"></div>
+			<div id="maximize-button"></div>
+			<div id="terminal-title">Terminal</div>
+		</div>
+		<div class="terminal-content">
+			<label for="command">user@dolig.xyz $ </label>
+			<input type="text" name="command" value=""></input>
 		</div>
 	</section>
 
